<resources>
    <string name="app_name">Bevásárló Lista</string>
    <string name="add_item">Hozzáadás</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="bevasarlo_lista">Bevásárló lista</string>
    <string name="buy">Vásárlás</string>
    <string name="Delete">Törlés</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Árucikk neve</string>
    <string name="cancel">Mégsem</string>
    <string name="add_a_new_item">Add meg az árucikk nevét</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="are_you_sure">Biztosan megveszed a kijelölt termékeket?</string>
    <string name="are_you_sure_to_remove">Biztosan törlöd a terméket?</string>
    <string name="adj_hozz_egy_term_ket_a_list_hoz">Adj hozzá egy terméket a listához</string>
    <string name="login">Login</string>
    <string name="list_im">Listáim</string>
    <string name="j_lista">Új lista</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="lista">Lista</string>
    <string name="uj_lista">Új lista</string>
    <string name="profil">Profil</string>
    <string name="listaim">Listáim</string>
    <string name="logout">Logout</string>
    <string name="kijelentkezes_sikertelebn">Kijelentkezés sikertelen</string>
    <string name="sikertelen_bejelentkezes">Sikertelen bejelentkezés</string>
    <string name="nincs_internet">Nincs elérhető internetkapcsolat</string>
    <string name="unkwown_error">Ismeretlen hiba</string>
    <string name="kijelentkezés">Kijelentkezés</string>
    <string name="subscribe_to_a_list">Hozz létre egy új listát, vagy iratkozz fel egy meglévőre!</string>
    <string name="j_lista_hozz_ad_sa">Új lista hozzáadása</string>
    <string name="uj_lista_neve">Új lista neve</string>
    <string name="nev">Név:</string>
    <string name="e_mail">E-mail:</string>
    <string name="feliratkozas_listara_text">A "Feliratkozás listára" opcióval egy már létező listára iratkozhatsz fel. Ehhez szükséged lesz a lista egyedi azonosítójára.</string>
    <string name="uj_lista_text">Az "Új lista hozzáadása" opcióval egy teljesen új listát hozhatsz létre, amelyet ezután megoszthatsz akárkivel.</string>
    <string name="feliratkozas_egy_listara">Feliratkozás egy listára</string>
    <string name="lista_azonositoja">Lista azonosítója</string>
    <string name="welcome_text">Üdvözöllek a Bevásárló Listában!</string>
    <string name="please_sign_in_text">Kérlek jelentkezz be, hogy használhasd az alkalmazást.</string>
    <string name="rename">Átnevez</string>
    <string name="alapertelmezett">Alapértelmezett</string>
    <string name="vilagos">Világos</string>
    <string name="sotet">Sötét</string>
    <string name="theme">Téma</string>
    <string name="settings">Beállítások</string>
    <string name="appearance">Megjelenés</string>
</resources>